Upgrade Neo4j Container image to version 5.26-community-ubi9
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/components/camel-ai/camel-neo4j/src/test/resources/log4j2.properties
+++ b/components/camel-ai/camel-neo4j/src/test/resources/log4j2.properties
@@ -14,5 +14,22 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
-neo4j.container=mirror.gcr.io/neo4j:5.26-community-ubi9
-neo4j.container.ppc64le=icr.io/ppc64le-oss/neo4j:4.4
+
+appender.file.type = File
+appender.file.name = file
+appender.file.fileName = target/camel-neo4j-test.log
+appender.file.layout.type = PatternLayout
+appender.file.layout.pattern = %d [%-15.15t] %-5p %-30.30c{1} - %m%n
+
+appender.out.type = Console
+appender.out.name = out
+appender.out.layout.type = PatternLayout
+appender.out.layout.pattern = [%30.30t] %-30.30c{1} %-5p %m%n
+
+rootLogger.level = INFO
+rootLogger.appenderRef.file.ref = file
+# To log to stdout
+#rootLogger.appenderRef.out.ref = out
+
+logger.camel-milvus.name = org.apache.camel.component.milvus
+logger.camel-milvus.level = DEBUG
