--- a/test-infra/camel-test-infra-arangodb/pom.xml
+++ b/test-infra/camel-test-infra-arangodb/pom.xml
@@ -41,6 +41,11 @@
             <version>${project.version}</version>
             <type>test-jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.arangodb</groupId>
+            <artifactId>arangodb-java-driver</artifactId>
+            <version>${arangodb-java-version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.testcontainers</groupId>
