chore: fix build for Maven 4
Switch to Nisse extension and make sure the os.detected.classifier is a project property, so that it can be overriden by profiles (as user properties cannot).

--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,8 @@
         <invoker.skip>${skipTests}</invoker.skip>
 
         <enforcer.phase>none</enforcer.phase><!-- We do not enforce with -Dquickly, the property is overridden in the full profile -->
+
+        <os.detected.classifier>${nisse.os.classifier}</os.detected.classifier>
     </properties>
 
     <!-- Comment out the snapshot repositories as we don't need them now -->
