CAMEL-21658: Create a fat-jar launcher for Camel JBang
This commit implements a fat-jar launcher for Camel JBang that provides a pre-built distribution with all dependencies included. The launcher eliminates the two-step process where JBang first parses the .java file and then calls camel-jbang.

Key changes:

- Created a new Maven module camel-jbang-launcher

- Implemented a simple launcher class that calls CamelJBangMain.run()

- Configured Maven Shade plugin to create a fat-jar with all dependencies

- Created shell and batch scripts for Unix/Linux and Windows

- Configured Maven Assembly plugin to create distribution archives

- Used properties for dependency versions instead of hardcoded values

- Placed scripts in the root folder of the distribution

- Added example files in the examples directory

- Fixed Maven dependency resolution by including all necessary dependencies

--- a/dsl/camel-jbang/pom.xml
+++ b/dsl/camel-jbang/pom.xml
@@ -40,6 +40,7 @@
         <module>camel-jbang-plugin-generate</module>
         <module>camel-jbang-plugin-edit</module>
         <module>camel-jbang-plugin-kubernetes</module>
+        <module>camel-jbang-launcher</module>
         <module>camel-jbang-it</module>
     </modules>
 </project>
