--- a/test-infra/camel-test-infra-couchbase/pom.xml
+++ b/test-infra/camel-test-infra-couchbase/pom.xml
@@ -40,6 +40,11 @@
             <version>${project.version}</version>
             <type>test-jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.couchbase.client</groupId>
+            <artifactId>java-client</artifactId>
+            <version>${couchbase-client-version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.testcontainers</groupId>
