--- a/components/camel-oauth/pom.xml
+++ b/components/camel-oauth/pom.xml
@@ -33,7 +33,7 @@
     <description>Camel OAuth (Preview)</description>
 
     <properties>
-        <keycloak.client.version>26.0.5</keycloak.client.version>
+        <firstVersion>4.12.0</firstVersion>
         <supportLevel>preview</supportLevel>
     </properties>
 
@@ -105,7 +105,7 @@
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-admin-client</artifactId>
-            <version>${keycloak.client.version}</version>
+            <version>${keycloak-client-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
