--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -326,6 +326,7 @@
         <jython-version>2.7.4</jython-version>
         <jzlib-version>1.1.3</jzlib-version>
         <kafka-version>3.8.1</kafka-version>
+        <keycloak-client-version>26.0.5</keycloak-client-version>
         <kubernetes-client-version>7.3.1</kubernetes-client-version>
         <kudu-version>1.17.1</kudu-version>
         <langchain4j-version>0.36.2</langchain4j-version>
