--- a/components/camel-ai/camel-pinecone/pom.xml
+++ b/components/camel-ai/camel-pinecone/pom.xml
@@ -39,6 +39,9 @@
         <!-- Milvus is not available on these platforms -->
         <skipITs.s390x>true</skipITs.s390x>
         <skipTests.s390x>true</skipTests.s390x>
+
+        <!-- Pinecone Docker image is not available for this architecture -->
+        <skipITs.ppc64le>true</skipITs.ppc64le>
     </properties>
 
     <dependencies>
