fix: deactivate ElasticSearch IT tests on ppc64le
ElasticSearch has been upgraded to 9.x but the image on ppc64le is not
yet available.

Signed-off-by: Aurélien Pupier <apupier@redhat.com>

--- a/components/camel-elasticsearch/pom.xml
+++ b/components/camel-elasticsearch/pom.xml
@@ -35,6 +35,8 @@
     <properties>
         <!-- Elasticsearch container is not available on these platforms -->
         <skipITs.s390x>true</skipITs.s390x>
+        <!-- The image for ElasticSearch 9.x for ppc64le architecture is not yet available -->
+        <skipITs.ppc64le>true</skipITs.ppc64le>
 
         <camel.surefire.reuseForks>false</camel.surefire.reuseForks>
     </properties>
