--- a/test-infra/camel-test-infra-elasticsearch/src/main/resources/org/apache/camel/test/infra/elasticsearch/services/container.properties
+++ b/test-infra/camel-test-infra-elasticsearch/src/main/resources/org/apache/camel/test/infra/elasticsearch/services/container.properties
@@ -15,4 +15,5 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 elasticsearch.container=docker.elastic.co/elasticsearch/elasticsearch:9.0.1
+# IT tests are currently deactivated on ppc64le until  an image for 9.x is available
 elasticsearch.container.ppc64le=icr.io/ppc64le-oss/elasticsearch-ppc64le:8.3.3
