--- a/dsl/camel-yaml-dsl/camel-yaml-dsl/src/test/resources/kamelets/mySetBody.kamelet.yaml
+++ b/dsl/camel-yaml-dsl/camel-yaml-dsl/src/test/resources/kamelets/mySetBody.kamelet.yaml
@@ -29,5 +29,5 @@ spec:
     from:
       uri: "kamelet:source"
       steps:
-        - set-body:
+        - setBody:
             constant: "{{payload}}"
