--- a/dsl/camel-yaml-dsl/camel-yaml-dsl/src/test/resources/kamelets/prefix-action.kamelet.yaml
+++ b/dsl/camel-yaml-dsl/camel-yaml-dsl/src/test/resources/kamelets/prefix-action.kamelet.yaml
@@ -41,5 +41,5 @@ spec:
     from:
       uri: "kamelet:source"
       steps:
-        - set-body:
+        - setBody:
             simple: "{{prefix}} ${body}"
