--- a/dsl/camel-yaml-dsl/camel-yaml-dsl/src/test/resources/kamelets/prefix-and-upper-action.kamelet.yaml
+++ b/dsl/camel-yaml-dsl/camel-yaml-dsl/src/test/resources/kamelets/prefix-and-upper-action.kamelet.yaml
@@ -42,5 +42,5 @@ spec:
       uri: "kamelet:source"
       steps:
         - to: "kamelet:prefix-action?prefix={{greeting}}"
-        - set-body:
+        - setBody:
             simple: "${body.toUpperCase()}"
