--- a/dsl/camel-yaml-dsl/camel-yaml-dsl/src/test/resources/kamelets/route-timer-source.kamelet.yaml
+++ b/dsl/camel-yaml-dsl/camel-yaml-dsl/src/test/resources/kamelets/route-timer-source.kamelet.yaml
@@ -64,9 +64,9 @@ spec:
         parameters:
           period: "{{period}}"
         steps:
-          - set-body:
+          - setBody:
               constant: "{{message}}"
-          - set-header:
+          - setHeader:
               name: "Content-Type"
               constant: "{{contentType}}"
           - to: kamelet:sink
