--- a/dsl/camel-yaml-dsl/camel-yaml-dsl/src/test/resources/kamelets/upper-action.kamelet.yaml
+++ b/dsl/camel-yaml-dsl/camel-yaml-dsl/src/test/resources/kamelets/upper-action.kamelet.yaml
@@ -31,5 +31,5 @@ spec:
     from:
       uri: "kamelet:source"
       steps:
-        - set-body:
+        - setBody:
             simple: "${body.toUpperCase()}"
