CAMEL-22115: Add new camel-catalog-suggest that is much smaller than lucene based

--- a/catalog/camel-report-maven-plugin/pom.xml
+++ b/catalog/camel-report-maven-plugin/pom.xml
@@ -69,7 +69,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-catalog-lucene</artifactId>
+            <artifactId>camel-catalog-suggest</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
