--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2862,6 +2862,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
+                <artifactId>camel-catalog-suggest</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
                 <artifactId>camel-route-parser</artifactId>
                 <version>${project.version}</version>
             </dependency>
