--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -198,6 +198,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-catalog-suggest</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-route-parser</artifactId>
         </dependency>
 
