--- a/bom/camel-bom/pom.xml
+++ b/bom/camel-bom/pom.xml
@@ -403,6 +403,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-catalog-suggest</artifactId>
+        <version>4.12.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-cbor</artifactId>
         <version>4.12.0-SNAPSHOT</version>
       </dependency>
