--- a/catalog/camel-catalog-suggest/pom.xml
+++ b/catalog/camel-catalog-suggest/pom.xml
@@ -26,15 +26,14 @@
         <version>4.12.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>camel-catalog-lucene</artifactId>
+    <artifactId>camel-catalog-suggest</artifactId>
     <packaging>jar</packaging>
-    <name>Camel :: Catalog :: Lucene (deprecated)</name>
-    <description>Camel Catalog Lucene</description>
+    <name>Camel :: Catalog :: Suggest</name>
+    <description>Camel Catalog Suggest</description>
 
     <properties>
-        <firstVersion>2.17.0</firstVersion>
+        <firstVersion>4.13.0</firstVersion>
         <label>tooling</label>
-        <supportLevel>Deprecated</supportLevel>
     </properties>
 
     <dependencies>
@@ -45,14 +44,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-core</artifactId>
-            <version>${lucene-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-suggest</artifactId>
-            <version>${lucene-version}</version>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
         </dependency>
 
         <!-- disable all components -->
