--- a/catalog/pom.xml
+++ b/catalog/pom.xml
@@ -43,6 +43,7 @@
         <module>camel-catalog-console</module>
         <module>camel-catalog-lucene</module>
         <module>camel-catalog-maven</module>
+        <module>camel-catalog-suggest</module>
         <!-- tooling that depends on catalog -->
         <module>camel-route-parser</module>
         <module>camel-csimple-maven-plugin</module>
