--- a/dsl/camel-kamelet-main/pom.xml
+++ b/dsl/camel-kamelet-main/pom.xml
@@ -128,7 +128,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-catalog-lucene</artifactId>
+            <artifactId>camel-catalog-suggest</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
