CAMEL-20018: camel-yaml-dsl - Remove deprecated support for kebab-case in DSL

--- a/dsl/camel-jbang/camel-jbang-plugin-kubernetes/src/test/resources/route-service.yaml
+++ b/dsl/camel-jbang/camel-jbang-plugin-kubernetes/src/test/resources/route-service.yaml
@@ -18,5 +18,5 @@
 - from:
     uri: 'platform-http:/roll-dice'
     steps:
-      - set-body:
+      - setBody:
           simple: 'roll: $simple{random(1,7)}'
