CAMEL-20018: camel-yaml-dsl - Remove deprecated support for kebab-case in DSL

--- a/dsl/camel-kamelet-main/src/test/resources/my-modeline.yaml
+++ b/dsl/camel-kamelet-main/src/test/resources/my-modeline.yaml
@@ -22,7 +22,7 @@
     parameters:
       period: "{{period}}"
     steps:
-      - set-body:
+      - setBody:
           constant: "{{say}} Yaml !!!"
       - transform:
           simple: "${body.toUpperCase()}"
