--- a/dsl/camel-jbang/camel-launcher/pom.xml
+++ b/dsl/camel-jbang/camel-launcher/pom.xml
@@ -24,15 +24,15 @@
     <parent>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-jbang-parent</artifactId>
-        <version>4.12.0-SNAPSHOT</version>
+        <version>4.13.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>camel-jbang-launcher</artifactId>
+    <artifactId>camel-launcher</artifactId>
     <packaging>jar</packaging>
 
-    <name>Camel :: JBang :: Launcher</name>
-    <description>Camel JBang Fat-Jar Launcher</description>
+    <name>Camel :: Launcher</name>
+    <description>Camel Fat-Jar Launcher</description>
 
     <properties>
         <firstVersion>4.12.0</firstVersion>
@@ -252,7 +252,7 @@
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.apache.camel.dsl.jbang.launcher.CamelJBangLauncher</mainClass>
+                                    <mainClass>org.apache.camel.dsl.jbang.launcher.CamelLauncher</mainClass>
                                     <manifestEntries>
                                         <Multi-Release>true</Multi-Release>
                                     </manifestEntries>
