CAMEL-22116: Fix camel-openapi-validator to better support base-path such as SB war apps that are seperated by context-path

--- a/components/camel-openapi-validator/pom.xml
+++ b/components/camel-openapi-validator/pom.xml
@@ -40,7 +40,7 @@
 
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-support</artifactId>
+            <artifactId>camel-rest-openapi</artifactId>
         </dependency>
 
         <dependency>
