--- a/components/camel-jackson/pom.xml
+++ b/components/camel-jackson/pom.xml
@@ -69,5 +69,11 @@
             <version>${jsonassert-version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj-version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
